--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Find the invisible Mario!</h5>
+                    <h5 class="modal-title">找到隐藏的牛批!</h5>
                 </div>
                 <div class="modal-body">
-                    <p>Yahoo! Mario has escaped the insane asylum and needs finding.<br />To find him, listen for his call for help! The faster he Yahoo!'s, the closer you are to him..</p>
+                    <p>什么b动静？有牛批藏起来了，我们需要找到他<br />为了找到牛批，我们要竖起耳朵，牛铃声越快，他就离我们越近</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="startGame()">I'm
