--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <dt style="color: #78ee93;">保存存档</dt>
       </dl>
     </div>
+    <div>
+        <img src="ka.jpg" alt="some_text">
+    </div>
   </body>
 </html>
